fix: Avatar image scales correctly on small screens

--- a/css/post.css
+++ b/css/post.css
@@ -40,6 +40,9 @@
   grid-area: avatar;
   display: flex;
   justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
 }
 
 .avatar .avatar-img {
